--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 /[Mm]emoryCaptures/
 /[Uu]serSettings/
 /[Aa]ssets/[Rr]esources/
+!/[Aa]ssets/[Rr]esources/[Pp]refabs/
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
